# dev-box

./: .gitignore  .gitmodules  Containerfile.in  Makefile.am  README.md  Vagrantfile  Vagrantfile.in  bootstrap.conf  configure.ac  provision-apk  provision-dnf  provision-pip  provision-yum  rules.mk
.github/workflows/: ci.yml  containers.yml  toolbox.yml
build-aux/: install-buildreqs  install-prereqs
images/centos-stream/cs9/: Containerfile  extra-packages
provision/: .gitignore  Makefile.am  detutils-install.in  envconf-install.in  package-install-alpine  package-install-centos  package-install-fedora  package-install-rhel  package-install-ubuntu  package-upgrade-alpine  package-upgrade-debian  package-upgrade-rhel  pip-install
src/: Makefile.am  provision-alpine  provision-fedora  provision-ubuntu
